--- a/Website.html
+++ b/Website.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="Website.css">
     <title>Introduction to Java</title>
 </head>
 <body>
+    <script type="text/javascript" src="Website.js"></script>
     <div class="header-container">
         <h1>Introduction to Java</h1>
     </div>
